| Bug #3728 | Missing warning in 4.1 | ||
|---|---|---|---|
| Submitted: | 12 May 2004 15:34 | Modified: | 20 May 2004 11:51 |
| Reporter: | SINISA MILIVOJEVIC | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Server | Severity: | S3 (Non-critical) |
| Version: | 4.1 | OS: | Any (any) |
| Assigned to: | Ramil Kalimullin | CPU Architecture: | Any |
[18 May 2004 9:18]
Ramil Kalimullin
ChangeSet 1.1855 04/05/18 12:16:00 ram@gw.mysql.r18.ru +3 -0 A fix (Bug #3728: Missing warning in 4.1).
[20 May 2004 11:51]
Ramil Kalimullin
Thank you for your bug report. This issue has been committed to our
source repository of that product and will be incorporated into the
next release.
If necessary, you can access the source repository and build the latest
available version, including the bugfix, yourself. More information
about accessing the source trees is available at
http://www.mysql.com/doc/en/Installing_source_tree.html

Description: Inserting a non-valid string into DATETIME results in DATETIME getting a default value of "0000-00-00 00:00:00". That is fine, but there is no warning in SHOW WARNINGS. How to repeat: create table xx (d datetime); insert into xx values(""); show warnings; select * from xx; drop table xx;