A fix (Bug #3728: Missing warning in 4.1).